test/parsetest/valid/function_calls.java

class foo {
  public void a() {
    foo();
    foo (0);
    foo(String, 0, a);
  }
}
