test/parsetest/invalid/function_calls3.java

class foo {
  public void a() {
    foo(,b);
  }
}
